@@ -1,68 +1,0 @@
-<h1 tal:replace="structure here/manage_page_header"> PAGE HEADER </h1>
-<h2 tal:replace="structure here/manage_tabs"> PAGE HEADER </h2>
-
-<h3> Hash session identifier management</h3>
-
-<p class="form-help">
-This plugin is configured to use a SHA1 based authentication method to identify
-login sessions.
-</p>
-
-<p>
-This implementation uses a ring of five secrets: one of them is used to
-generate new session identifiters, the others are older signing secrets which
-are still considerd to be valid.
-</p>
-
-<h4>Invalidate all session identifiers</h4>
-
-<p>
-By clicking the button below you clear all secrets user to validate sessions.
-This will immediately log out all users who use session authentication and
-require them to log in again.
-</p>
-
-<form method="post" action="."
-      tal:attributes="action string:${context/absolute_url}">
-    <input type="submit" name="manage_clearSecrets:method" value="Clear secrets">
-    <input tal:replace="structure context/@@authenticator/authenticator" />
-</form>
-
-<h4>Create a new (signing) secret</h4>
-
-<p>
-By clicking the button below a new signing secret will be created and added
-to the ring. This will remove the oldest secret from the ring if there already
-were five secrets present.
-</p>
-
-
-<form method="post" action="."
-      tal:attributes="action string:${context/absolute_url}">
-    <input type="submit" name="manage_createNewSecret:method" value="New secret">
-    <input tal:replace="structure context/@@authenticator/authenticator" />
-</form>
-
-<p>
-It is a good idea to regularly create a new signing secret. This can be done
-manually using the above command, or automated using Zope's clock server. To
-do this add a stanza like the following to your <em>zope.conf</em>:
-</p>
-
-<pre>
-&lt;clock-server&gt;
-  method <span tal:replace="python:'/'.join(context.getPhysicalPath()) + '/manage_createNewSecret'">/Plone/acl_users/session/manage_createNewSecret</span>
-  period 14400
-  user admin
-  password <em>&lt;admin password&gt;</em>
-  host localhost
-&lt;/clock-server&gt;
-</pre>
-
-<p>
-This instructs Zope to call routine to create a new secret every four hours.
-Make sure to configure a valid manager login.
-</p>
-
-<h1 tal:replace="structure here/manage_page_footer"> PAGE FOOTER </h1>
-
